# fdb-estelle

./: README.md  pyproject.toml  pyvenv.cfg
estelle/: agent.py  cli.py
estelle/lib/: config.py  context.py  ensemble.py  joshua.py  model.py  serde_bytes.py  task.py  utils.py
estelle/lib/agent/: __init__.py  agent_info.py  core.py  heartbeat.py  http_server.py  loader.py  runner.py  task_list.py  worker.py
estelle/lib/cli/: agent.py  context.py  ensemble.py  failure.py  storage.py  task.py
estelle/lib/record/: __init__.py  _sql_base.py  base.py  foundationdb.py  sql.py  sql_base.py
estelle/lib/storage/: __init__.py  base.py  cached_download.py  checksum.py  local_filesystem.py  s3.py
estelle/test/: mock_correctness.py  test_serde_bytes.py
estelle/test/record/: test_record.py  test_record_foundationdb.py
