[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fdb-estelle"
version = "0.0.1"
authors = [
  { name = "FoundationDB Developers", email = "fdb-dev@group.apple.com" },
]
description = "Framework for FoundationDB simulation tests"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "loguru ~= 0.7",
  "pyserde ~= 0.20",
  "tomli_w ~= 1.1",
  "platformdirs ~= 4.3",
  "opendal ~= 0.45"
]

[project.optional-dependencies]
cli = ["typer ~= 0.12", "typing-extensions ~= 4.12", "rich ~= 13.7"]
agent = ["click ~= 8.1", "flask ~= 3.0"]
aws = ["boto3 ~= 1.35"]
sql = ["sqlalchemy ~= 2.0", "sqlalchemy-utils ~= 0.41"]
test = ["pytest ~= 8.3"]
fdb = ["foundationdb ~= 7.3"]
dev = ["ipdb", "black"]

[project.urls]
Homepage = "http://github.com/xiaoge-su/fdb-estelle"
